# meridian

./: .gitignore  CHUNKS.md  PLAN.md  README.md  main.py  pyproject.toml
docs/: SCREENSHOTS.md
scripts/: document_one_node.py  document_repo.py  fetch_fixtures.sh  make_goldens.sh  regenerate_swap_golden.py  smoke_parse.py  trace_one_flow.py  validate_vault.py
src/: agent.py  subagents.py  tools.py  validate.py
src/analyzers/: __init__.py  env.py  semgrep.py  slither.py
src/graph/: cache.py  persist.py  topo.py
src/render/: canvas.py  diff_md.py  mermaid.py  mermaid_styles.py  moc.py  obsidian.py
tests/: conftest.py  test_agent_build.py  test_analyzer_env.py  test_annotate_concurrency.py  test_annotations.py  test_augment_sarif.py  test_cache.py  test_canvas.py  test_cli.py  test_diff.py  test_diff_md.py  test_dispatch.py  test_dispatch_flows.py  test_dispatch_risk.py  test_document_one_node.py  test_document_repo.py  test_flowtracer_build.py  test_golden_flow.py  test_golden_notes.py  test_mermaid_callgraph.py  test_mermaid_inheritance.py  test_mermaid_sequence.py  test_mermaid_styles.py  test_moc.py  test_obsidian_writer.py  test_persist.py  test_preanalysis.py  test_read_file_range.py  test_regenerate_swap_golden.py  test_render_risks.py  test_render_template.py  test_risksynth_build.py  test_semgrep.py  test_slither.py  test_subagents.py  test_tool_schemas.py  test_tools_core.py  test_tools_surface.py  test_tools_symlink_escape.py  test_tools_traversal.py  (+4 more)
tests/fixtures/: README.md
tests/fixtures/python_smol/: README.md  bad.py  rules-exec.yaml  rules-secret.yaml  rules.yaml
tests/fixtures/tier0_erc4626/: README.md
tests/fixtures/tier1_uniswap_v2/: README.md
tests/golden/: ERC4626.md  FixedPointMathLib.md
tests/golden/flows/: UniswapV2Pair.swap.md
tests/integration/uniswap_v2/: README.md  expected_files.txt  run.sh
