[project]
name = "washable"
version = "0.1.0"
description = "Code atlas — turns any codebase into an audit-ready Obsidian vault using Trailmark and deepagents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.6.2",
    "langchain-openai>=1.2.1",
    "trailmark>=0.3.1",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
    "types-pyyaml>=6.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
