[project]
name = "washable"
version = "0.1.0"
description = "Code atlas — turns any codebase into an audit-ready Obsidian vault using Trailmark and deepagents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.6.2",
    "langchain-openai>=1.2.1",
    "trailmark>=0.3.1",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "slither-analyzer>=0.11",
    "semgrep>=1.45.0,<2.0.0",
]

[project.scripts]
washable = "main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
# Top-level modules that ship in the wheel. `src/` is the
# package tree; `main.py` provides the console_script entry
# (`washable = "main:cli"`).
packages = ["src"]

[tool.hatch.build.targets.wheel.force-include]
# `include` only affects sdists; `force-include` is the
# wheel equivalent that puts main.py at the wheel root so
# `from main import cli` resolves post-install (verified
# with `uvx --from . washable --version` smoke).
"main.py" = "main.py"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
    "types-pyyaml>=6.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
